<?xml version="1.0"?>
<package>
  <name>rose20_gazebo_plugins</name>
  <version>0.0.0</version>
  <description>The rose20_gazebo_plugins package</description>

  <maintainer email="hendriks@robot-rose.nl">okke</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscomm</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rose_base_msgs</build_depend>
  <build_depend>rose_common</build_depend>
  <build_depend>server_multiple_client</build_depend>
  <build_depend>shared_variables</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscomm</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rose_base_msgs</run_depend>
  <run_depend>rose_common</run_depend>
  <run_depend>rose_conversions</run_depend>
  <run_depend>server_multiple_client</run_depend>
  <run_depend>shared_variables</run_depend>

  <export>
  </export>
</package>